--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "learn_to_rust"
 version = "0.1.0"
-authors = ["BKDOnions <zqdbyct@gmail.com>"]
+authors = ["Richard <zqdbyct@gmail.com>"]
 edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
