--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,8 @@ edition = "2018"
 
 [dependencies]
 rand = "0.5.5"
-#num-traits = "0.2.14"
+rust-crypto = "0.2.36"
+block-modes = "0.8.1"
 clap = "2.33.3"
 [profile.release]
 panic = 'abort'
